Validate YAML and fixed bugs

--- a/settings/settings.yaml
+++ b/settings/settings.yaml
@@ -21,61 +21,82 @@ pieces:
 # player 1 pieces to spawn
 player1:
   1:
+    # Template
     - 3
-    - [-5, 10]
+    # Spawn Coordinates
+    - [0, 0]
+    # Direction Coordinates
+    - [0, -1, 1]
   2:
     - 3
     - [-6, 10]
+    - [0, -1, 1]
   3:
     - 3
     - [-4, 10]
+    - [0, -1, 1]
   4:
     - 2
     - [-7, 11]
+    - [0, -1, 1]
   5:
     - 2
     - [-4, 11]
+    - [0, -1, 1]
   6:
     - 2
     - [-8, 12]
+    - [0, -1, 1]
   7:
     - 2
     - [-4, 12]
+    - [0, -1, 1]
   8:
     - 1
     - [-9, 13]
+    - [0, -1, 1]
   9:
     - 1
     - [-4, 13]
+    - [0, -1, 1]
 # player 2 pieces to spawn
 player2:
   1:
     - 3
     - [5, -10]
+    - [0, 1, -1]
   2:
     - 3
     - [6, -10]
+    - [0, 1, -1]
   3:
     - 3
     - [4, -10]
+    - [0, 1, -1]
   4:
     - 2
     - [7, -11]
+    - [0, 1, -1]
   5:
     - 2
     - [4, -11]
+    - [0, 1, -1]
   6:
     - 2
     - [8, -12]
+    - [0, 1, -1]
   7:
     - 2
     - [4, -12]
+    - [0, 1, -1]
   8:
     - 1
     - [9, -13]
+    - [0, 1, -1]
   9:
     - 1
     - [4, -13]
+    - [0, 1, -1]
 # what hexes exist on the board
 # TODO: Compress this to bytes, and then decompress when run.
 board:
