--- a/settings/default_settings.yaml
+++ b/settings/default_settings.yaml
@@ -3,18 +3,21 @@ pieces:
   #infantry
   1:
     health: 30
-    distance: 5
-    attack: 6
+    movement_d: 5
+    attack_d: 6
+    power: 6
   #defense
   2:
     health: 40
-    distance: 3
-    attack: 4
+    movement_d: 3
+    attack_d: 4
+    power: 4
   #speed
   3:
     health: 25
-    distance: 6
-    attack: 5
+    movement_d: 6
+    attack_d: 3
+    power: 5
 # player 1 pieces to spawn
 player1:
   1:
